[package]
name = "concat-use-test"
version = "0.1.0"
edition = "2021"
authors = ["Thomas Mundar <thomas@mundar.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Mundar/concat-use"
keywords = ["use-lines", "concat-use", "tests", "testing"]
categories = []
#rust-version = "1.67"	# Haven't determined yet. This is copied from another crate.
description = "A test crate for `concat-use` and `use-lines` crates"

[dependencies]
concat-use = {version = "0.1.0", path = "../concat-use"}
use-lines = {version = "0.1.0", path = "../use-lines"}
